<resources>
    <string name="app_name">Red</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_btn">Next</string>
    <string name="back_btn">Back</string>
    <string name="tutorial1">Save Lives By Giving</string>
    <string name="tutorial2">Donate Blood</string>
    <string name="tutorial3">Request Blood</string>
    <string name="tutorial4">Help Save Lives</string>
    <string name="start">Start</string>
    <string name="login">Login</string>
    <string name="sign_to_continue">sign in to continue</string>
    <string name="_20">+20</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="submit">Submit</string>
    <string name="verify">Verify</string>
    <string name="verification">Verification</string>
    <string name="enter_your_code">Enter your code here</string>
    <string name="phone_number">Phone Number</string>
    <string name="registration">Registration</string>
    <string name="please_enter_your_data_to_proceed">Please Enter Your Data To Proceed</string>
    <string name="personal_details">Personal Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="blood_type">Blood Type</string>
    <string name="register">Register</string>
    <string name="national_id">National Id</string>

    <string name="save_user_to_shared_pref">SAVE_USER_TO_SHARED_PREF</string>
    <string name="request">Request</string>
    <string name="donate">Donate</string>
    <string name="profile">Profile</string>
    <string name="request_blood">Request Blood</string>
    <string name="for_me">For me</string>
    <string name="for_other">For other</string>
    <string name="request_date">Request Date</string>
    <string name="address_details">Donation Address Details</string>
    <string name="verified_phone_number">Verified Phone Number</string>
    <string name="message_to_donor">Message to Donor (optional)</string>
    <string name="submit_request">Submit Request</string>
    <string name="wants_blood_for">wants blood for</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="message">Message</string>
    <string name="dot">:</string>
    <string name="details">Details</string>
    <string name="requests_nearby">Requests Nearby</string>
    <string name="are_you_sure_you_will_donate">Are You Sure You Will Donate?</string>
    <string name="by_verifying_donation_request_owner_will_be_notified">By verifying donation, request owner will be notified</string>
    <string name="request_details">Request Details</string>
    <string name="pick_location">Pick Location</string>
    <string name="location_on_map">Location on Map</string>
    <string name="donors_count">Donors count</string>
    <string name="gender">Gender</string>
    <string name="show_location_on_map">show location on map</string>
    <string name="donation_text">Donation is a noble and selfless act that has the power to bring about positive change in the world. By giving to charitable causes, individuals and organizations can provide necessary resources and support to those in need, improving the lives of individuals and communities alike. Whether it is donating money, time, or resources, the act of giving can have a profound impact on both the giver and the recipient</string>
    <string name="thank_you">Thank You</string>
    <string name="map_location">Map location</string>
    <string name="submit_location">Submit Location</string>
    <string name="request_status">Request Status</string>
    <string name="profile_data">Profile Data</string>
    <string name="log_out">Log out</string>
    <string name="navigate_to_location">Navigate to Location</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="you_can_safely_donate_every_3_months">You Can Safely donate every 3 Months</string>

    <string-array name="blood_types">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
</resources>