<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.authentication.createaccount.CreateAccountFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/view2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/pink_light"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView">

            <ImageView
                android:id="@+id/iv_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:src="@drawable/app_main_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/please_enter_your_data_to_proceed"
            android:textAlignment="center"
            android:textColor="@color/bean_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="@string/personal_details"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ScrollView
            android:id="@+id/main_constrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/bg_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <EditText
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/view"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/tv_password"
                    app:layout_constraintEnd_toStartOf="@+id/tv_last_name"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_name"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/tv_last_name"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/view"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <EditText
                    android:id="@+id/tv_password"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view3" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_password" />

                <EditText
                    android:id="@+id/tv_confirm_password"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view4" />

                <View
                    android:id="@+id/view5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password" />


                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view5">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="1"
                        android:buttonTint="@color/bean_red"
                        android:checked="true"
                        android:drawableEnd="@drawable/male_gender"
                        android:paddingHorizontal="15dp"
                        android:tag="1"
                        android:text="@string/male"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <View
                        android:id="@+id/view6"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/black" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="3dp"
                        android:layout_weight="1"
                        android:buttonTint="@color/bean_red"
                        android:drawableEnd="@drawable/female"
                        android:paddingHorizontal="15dp"
                        android:tag="0"
                        android:text="@string/female"
                        android:textColor="@color/black" />

                </RadioGroup>

                <View
                    android:id="@+id/view7"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />


                <TextView
                    android:id="@+id/tv_blood_type"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/blood_type"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view7" />

                <Spinner
                    android:id="@+id/blood_type_spinner"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_blood_type"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_blood_type" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>



        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_constrain">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bean_red"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>