<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/off_white"
        tools:context=".presentation.authentication.loginwithpassword.LoginWithPasswordFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/view2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:elevation="5dp"
            app:cardCornerRadius="100dp"
            app:cardBackgroundColor="@color/pink_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:src="@drawable/app_main_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/bg_grey"
            android:layout_marginTop="30dp"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_20"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/eg" />

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:padding="5dp"
                android:gravity="center"
                android:textAlignment="viewStart"
                android:background="@android:color/transparent"
                android:hint="@string/phone_number"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <EditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/bg_grey"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:elevation="10dp"
            android:hint="Enter your password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="20dp"
            android:elevation="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bean_red"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>